02-terraform-sg-key/securitygroup.tf
# security group for ssh22 port
resource "aws_security_group" "vpc-ssh" {
  name        = "vpc-ssh"
  description = "Allow ssh 22 port open"

  ingress {
    description      = "inbound rule"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    description      = "outbound rules"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "vpc-ssh"
  }
}


# security group for 80  port
resource "aws_security_group" "vpc-http" {
  name        = "vpc-http"
  description = "Allow http port open"

  ingress {
    description      = "inbound rule"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "inbound rule"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    description      = "outbound rules"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "vpc-http"
  }
}
